# lingualeo_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  env.example  import_words.py  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
lingualeo/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_client.py  test_helpers.py
tests/fixtures/: mock_responses.py
