[project]
name = "lignualeo-scripts"
version = "0.1.0"
description = "Utilities and bots for importing words into LinguaLeo."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32",
    "python-telegram-bot>=21.6",
    "python-dotenv>=1.0.0",
]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.5.0",
]
