[project]
name = "lignualeo-scripts"
version = "0.1.0"
description = "Utilities and bots for importing words into LinguaLeo."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
dependencies = [
    "python-telegram-bot>=21.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
